[tool.poetry]
name = "spikify"
version = "0.1.0"
description = "迅速提升开发效率的工具包"
authors = ["seehar <seehar@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"


[tool.poetry.group.dev.dependencies]
black = "23.12.1"
isort = "5.13.2"
pre-commit = ">=3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
