[tool.poetry]
name = "spikify"
version = "0.0.1"
description = "迅速提升开发效率的工具包"
authors = ["seehar <seehar@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"


[tool.poetry.group.dev.dependencies]
black = "23.12.1"
isort = "5.13.2"
pre-commit = ">=3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
nox = "^2024.10.9"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
